CMBSandbox4/src/objects/Reduction_Hours__c.object
<CustomObject>
    <description>These hours will reduce the total hours of the bonus</description>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Bonus_Header__c</fullName>
        <label>Monthly Bonus Header</label>
        <referenceTo>Monthly_Bonus_Header__c</referenceTo>
        <relationshipLabel>Reduction Hours</relationshipLabel>
        <relationshipName>Reduction_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Reason for the reduction</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reduction Hours</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reduction Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>